test_regress/t/t_flag_structs_packed_bad.out
%Error: t/t_flag_structs_packed.v:14:19: Unpacked data type in packed struct/union
                                       : ... In instance x
   14 |       notpacked_t b;
      |                   ^
%Error: Exiting due to
